Consume the login endpoint
- Create loginCtrl.js file to handle login POST request
- Update html pages, main.js and main.css and add necessary states for authentication checks

[FINISHES #161284110]

--- a/UI/admins/delete-food.html
+++ b/UI/admins/delete-food.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Add To Cart</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -36,8 +37,11 @@
     </header>
 
     <main class="main-content">
+        <section class="m-t-40 text-center">
+            <h2 class="setup-page hide t-40">Loading... <i class="fa fa-spin fa-spinner"></i> </h2>
+        </section>
 
-        <div class="container">
+        <div class="container hide">
 
             <section class="card text-center">
                 <h2 class="text-center">You are about to delete this food</h2>
@@ -94,6 +98,7 @@
     </footer>
 
     <script src="../assets/js/main.js"></script>
+    <script src="../src/adminRedirectCtrl.js"></script>
 </body>
 
 </html>
