--- a/UI/admins/signin.html
+++ b/UI/admins/signin.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Signin</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -22,7 +23,8 @@
                         <input type="email" name="email" class="form-input email" placeholder="Enter Email" value="testmail@test.com">
                     </div>
                     <div class="form-member">
-                        <input type="password" name="password" id="password" class="form-input" placeholder="Enter Password" value="sEcUrEdpassword">
+                        <input type="password" name="password" id="password" class="form-input" placeholder="Enter Password"
+                            value="sEcUrEdpassword">
                     </div>
                     <div class="form-member">
                         <a href="foods.html">
