--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Index page</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
                 <a href="index.html" class="brand">Fast Food Fast</a>
+                <!-- <i class="fa fa-angle-down" aria-hidden="true"></i> -->
             </div>
             <div class="right-nav">
                 <a href="foods-menu.html" class="">Foods Menu</a>
