--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Index page</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
