--- a/UI/signin.html
+++ b/UI/signin.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Signin</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -17,18 +18,20 @@
             <div class="card card-shadow text-inverse">
                 <h2>Login To Your Account</h2>
                 <p>Login to have a wonderful experience and enjoy amazing discounts</p>
-                <form class="form-data contain" action="/" method="POST">
+                <form class="form-data contain" action="javascript:;" method="POST">
                     <div class="form-member">
-                        <input type="email" name="email" class="form-input email" placeholder="Enter Email" value="testmail@test.com">
+                        <input type="email" name="email" class="form-input email" placeholder="Enter Email">
                     </div>
                     <div class="form-member">
-                        <input type="password" name="password" id="password" class="form-input" placeholder="Enter Password" value="sEcUrEdpassword">
+                        <input type="password" name="password" class="form-input password" placeholder="Enter Password">
                     </div>
                     <div class="form-member">
-                        <a href="users/foods.html">
-                            <button name="signin" type="button" data-foodId="foodId7675" class="btn btn-green btn-block">Login</button>
-                        </a>
-
+                        <div class="response-area">
+                        </div>
+                        <div class="hide loader">
+                            <i class="fa fa-spinner fa-spin"></i>
+                        </div>
+                        <button name="login" type="button" class="btn btn-green btn-block login">Login</button>
                     </div>
                     <p>Don't have an account?
                         <a href="signup.html" class="link">Signup Instead</a>
@@ -39,45 +42,10 @@
                 </form>
             </div>
         </div>
-
-
     </div>
-    <script>
-        const emailInput = document.querySelector('.email');
-        const passwordInput = document.getElementById('password');
-        const loginBtn = document.querySelector('button');
-        const loginForm = document.querySelector('form');
-
-        loginBtn.addEventListener('click', (e) => {
-            // alert(5);
-            // e.preventDefault();
-            // console.log(e.target.dataset.foodid)
-        });
-
-        loginForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const email = emailInput.value
-            const password = passwordInput.value
-
-            const loginParams = {
-                email, password
-            }
-            console.log(loginParams);
-
-            fetch('http://localhost:5000/api/v1/orders', {
-                method: 'POST',
-                // headers: {
-                //     contentType: application/jason,
-                // },
-                loginParams
-            })
-                .then(res => res.json())
-                .then(data => console.log(data))
-                .catch(err => {
-                    console.log(err)
-                })
-        });
-    </script>
+    <script src="./src/loginCtrl.js"></script>
+    <script src="./src/flashMsg.js"></script>
+    <script src="./src/tokenExist.js"></script>
 </body>
 
 </html>
