--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -8,6 +8,7 @@
     <title>Fast-Food-Fast | Index page</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -40,8 +41,11 @@
     </header>
 
     <main class="main-content">
+        <section class="m-t-40 text-center">
+            <h2 class="setup-page hide t-40">Loading... <i class="fa fa-spin fa-spinner"></i> </h2>
+        </section>
 
-        <div class="container">
+        <div class="container hide">
             <h1 class="text-center">Whats On Our Menu</h1>
             <section class="card">
                 <h2 class="text-center">Cooked Foods</h2>
@@ -648,6 +652,7 @@
     </footer>
 
     <script src="../assets/js/main.js"></script>
+    <script src="../src/redirectCtrl.js"></script>
 </body>
 
 </html>
