Implement fetch menu
- Implement fetch all food items stored in the database
- Refactored fetch all food controller response messages
- Created index.js as default setup for all controllers to rely on

--- a/UI/users/dashboard.html
+++ b/UI/users/dashboard.html
@@ -109,6 +109,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
+    <script src="../src/index.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../src/redirectCtrl.js"></script>
 </body>
