--- a/UI/users/order-now.html
+++ b/UI/users/order-now.html
@@ -32,9 +32,9 @@
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
                 <a class="btn btn-green" href="my-cart.html">My Cart
-                    <span class="count">98</span>
+                    <i class="fa fa-shopping-cart"></i> <span class="count cart-count">0</span>
                 </a>
-                <a href="../logout.html" class="btn-rounded">Logout</a>
+                <a href="javascript:;" class="btn-rounded logout">Logout</a>
                 <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
@@ -127,7 +127,7 @@
         <div class="cart card-shadow text-center">
             <div class="right-nav">x</div>
             <div class="container">My Cart</div>
-            <div class="card text-inverse">6 Items added</div>
+            <div class="card text-inverse"><span class="cart-count">6</span> Items added</div>
             <div class="container">
                 <a href="my-cart.html" class="btn btn-green">View</a>
             </div>
