--- a/server/UI/signup.html
+++ b/server/UI/signup.html
@@ -65,6 +65,8 @@
 
     </div>
 
+    <script src="./assets/js/main.js"></script>
+    <script src="./src/index.js"></script>
     <script src="./src/signupCtrl.js"></script>
     <script src="./src/tokenExist.js"></script>
 </body>
