--- a/server/UI/index.html
+++ b/server/UI/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fast-Food-Fast | Index page</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Best fast food ordering platform">
+
+    <!--Favicon-->
+    <link rel="icon" href="assets/img/144x144.png">
+
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
@@ -317,7 +323,7 @@
             </section>
 
         </div>
-        <div class="cart card-shadow text-center">
+        <div class="slide-from-right cart card-shadow text-center">
             <div class="right-nav">x</div>
             <div class="container">My Cart</div>
             <div class="card text-inverse"><span class="cart-count">6</span> Items added</div>
