--- a/server/UI/signup.html
+++ b/server/UI/signup.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fast-Food-Fast | Signup</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Best fast food ordering platform">
+
+    <!--Favicon-->
+    <link rel="icon" href="assets/img/144x144.png">
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
