--- a/server/UI/users/foods.html
+++ b/server/UI/users/foods.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fast-Food-Fast | Index page</title>
-    <!-- stylesheets -->
+    <title>Fast-Food-Fast | Menu</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Best fast food ordering platform">
+    <!--Favicon-->
+    <link rel="icon" href="assets/img/144x144.png"><!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
@@ -115,6 +118,7 @@
             <div class="right-nav close-button">
                 <i class="fa fa-close"></i>
             </div>
+            <br>
             <div class="container">
                 <i class="fa fa-shopping-cart"></i>
                 My Cart
