--- a/server/UI/users/my-cart.html
+++ b/server/UI/users/my-cart.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fast-Food-Fast | My Cart</title>
-    <!-- stylesheets -->
+    <!-- Meta Description -->
+    <meta name="description" content="Best fast food ordering platform">
+    <!--Favicon-->
+    <link rel="icon" href="assets/img/144x144.png"><!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
@@ -65,141 +68,35 @@
                                 <th>Actions</th>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <!-- <td><a class="link">#55678</a></td> -->
-                                    <td>Orange Juice</td>
-                                    <td>&#8358; 500</td>
-                                    <td>1</td>
-                                    <td>&#8358; 500</td>
-                                    <td class="">
-                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update
-                                            Qauntity</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove
-                                            Item</button>
-
-                                        <div class="modal" id='#updateModal'>
-                                            <div class="modal-content">
-                                                <div class="text-center">
-                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
-                                                    <h2 class="text-center">Update Food Item From Cart</h2>
-
-                                                    <div class="content-div">
-                                                        <div class="item-title">Chicken Stew and Rice -
-                                                            <span class="badge price">&#8358;3,500</span>
-                                                        </div>
-                                                    </div>
-                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
-                                                        <div class="">
-                                                            <h3>Input New Quantity</h3>
-                                                            <input type="text" class="form-input" placeholder="Enter New Quantity">
-                                                            <h3>Are you sure you want to update this item's quantity?</h3>
-                                                            <button class="btn btn-green btn-rounded btn-bg">Update</button>
-                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="modal" id='#confirmModal'>
-                                            <div class="modal-content">
-                                                <div class="text-center">
-                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
-                                                    <h2 class="text-center">Delete Food Item From Cart</h2>
-
-                                                    <div class="content-div">
-                                                        <div class="item-title">Chicken Stew and Rice -
-                                                            <span class="badge price">&#8358;3,500</span>
-                                                        </div>
-                                                    </div>
-                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
-                                                        <div class="">
-                                                            <h3>Are you sure you want to remove this item from cart?</h3>
-                                                            <button class="btn btn-red btn-rounded btn-bg">Remove</button>
-                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- <td><a class="link">#55678</a></td> -->
-                                    <td>Chicken Stew and Rice</td>
-                                    <td>&#8358; 3,500</td>
-                                    <td>2</td>
-                                    <td>&#8358; 7,000</td>
-                                    <td class="">
-                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update
-                                            Qauntity</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove
-                                            Item</button>
-
-                                        <div class="modal" id='#updateModal'>
-                                            <div class="modal-content">
-                                                <div class="text-center">
-                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
-                                                    <h2 class="text-center">Update Food Item From Cart</h2>
-
-                                                    <div class="content-div">
-                                                        <div class="item-title">Chicken Stew and Rice -
-                                                            <span class="badge price">&#8358;3,500</span>
-                                                        </div>
-                                                    </div>
-                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
-                                                        <div class="">
-                                                            <h3>Input New Quantity</h3>
-                                                            <input type="text" class="form-input" placeholder="Enter New Quantity">
-                                                            <h3>Are you sure you want to update this item's quantity?</h3>
-                                                            <button class="btn btn-green btn-rounded btn-bg">Update</button>
-                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="modal" id='#confirmModal'>
-                                            <div class="modal-content">
-                                                <div class="text-center">
-                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
-                                                    <h2 class="text-center">Delete Food Item From Cart</h2>
-
-                                                    <div class="content-div">
-                                                        <div class="item-title">Chicken Stew and Rice -
-                                                            <span class="badge price">&#8358;3,500</span>
-                                                        </div>
-                                                    </div>
-                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
-                                                        <div class="">
-                                                            <h3>Are you sure you want to remove this item from cart?</h3>
-                                                            <button class="btn btn-red btn-rounded btn-bg">Remove</button>
-                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- <td><a class="link">#55678</a></td> -->
-                                    <td>
-                                        <h2>Total</h2>
-                                    </td>
-                                    <td></td>
-                                    <td></td>
-                                    <td class="">
-                                        <h2>&#8358; 7,000</h2>
-                                    </td>
-                                    <td class="">
-                                    </td>
-                                </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="text-center contain-50">
-                    <button class="btn btn-green btn-bg btn-rounded btn-block place-order">Place Order</button>
+                    <div class="response-area">
+                    </div>
+                    <div class="hide loader">
+                        <i class="fa fa-spinner fa-spin"></i>
+                    </div>
+                    <button class="btn btn-green btn-bg btn-rounded btn-block triggerModal placeOrderModal" data-target='placeOrderModal'>Place
+                        Order</button>
+                    <!-- <button class="btn btn-red btn-bg btn-rounded btn-block place-order">Empty Cart</button> -->
+
+                    <div class="modal" id='#placeOrderModal'>
+                        <div class="modal-content">
+                            <div class="text-center">
+                                <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                <h2 class="text-center">You are about to place an order</h2>
+                                <form action="javascript:;" method="POST" class=" card card-shadow">
+                                    <div class="">
+                                        <h3>Are you sure you want to order all the items in cart?</h3>
+                                        <button class="btn btn-green btn-rounded btn-bg place-order">Proceed</button>
+                                        <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -216,6 +113,7 @@
     <!-- <script src="../src/redirectCtrl.js"></script> -->
     <script src="../src/addToCartCtrl.js"></script>
     <script src="../src/showCartCtrl.js"></script>
+    <script src="../src/ordersCtrl.js"></script>
 </body>
 
 </html>
