Touch up the css and index.js
- Update main.css: add animation slider to cart
- Update addToCart.js: toggle the animation class
- Update order-now.html

--- a/server/UI/users/order-now.html
+++ b/server/UI/users/order-now.html
@@ -51,7 +51,7 @@
         <div class="container hide">
 
             <section class="card text-center">
-                <h2 class="text-center">Order this food item</h2>
+                <h2 class="text-center">Food Details</h2>
                 <div class="contain contain-50">
                     <div class="order-one">
                         <div class="card card-shadow">
@@ -127,12 +127,20 @@
 
         </div>
 
-        <div class="cart card-shadow text-center">
-            <div class="right-nav">x</div>
-            <div class="container">My Cart</div>
-            <div class="card text-inverse"><span class="cart-count">6</span> Items added</div>
+        <div class="cart card-shadow slide-from-right text-center">
+            <div class="right-nav close-button">
+                <i class="fa fa-close"></i>
+            </div>
+            <br>
             <div class="container">
-                <a href="my-cart.html" class="btn btn-green">View</a>
+                <i class="fa fa-shopping-cart"></i>
+                My Cart
+            </div>
+            <div class="card text-inverse">
+                <span class="cart-count">6</span> Items added
+            </div>
+            <div class="container">
+                <a href="my-cart.html" class="btn btn-sm btn-green">View</a>
             </div>
         </div>
     </main>
