--- a/server/UI/users/all-orders.html
+++ b/server/UI/users/all-orders.html
@@ -61,10 +61,9 @@
                                 <th>Order Id</th>
                                 <th>Ordered Items</th>
                                 <th>Total Amount</th>
-                                <!-- <th>Quantity</th> -->
                                 <th>Date Ordered</th>
                                 <th>Order Status</th>
-                                <th>Delivery Status</th>
+                                <th class="hide">Delivery Status</th>
                                 <th>Actions</th>
                             </thead>
                             <tbody>
@@ -214,9 +213,10 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../src/index.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../src/index.js"></script>
     <script src="../src/redirectCtrl.js"></script>
+    <script src="../src/getOrdersCtrl.js"></script>
 </body>
 
 </html>
