--- a/server/UI/users/foods.html
+++ b/server/UI/users/foods.html
@@ -23,22 +23,11 @@
             </div>
             <div class="right-nav">
                 <a href="foods.html" class="active">Foods Menu</a>
-                <div class="dropdown">
-                    <button class="dropbtn">My Orders
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-                        <a href="pending-orders.html">Pending Orders</a>
-                        <a href="completed-orders.html">Completed Orders</a>
-                        <a class="all-orders.html" href="all-orders.html">All My Orders</a>
-                    </div>
-                </div>
-                <a href="my-profile.html" class="">My Profile</a>
+                <a href="../signin.html" class="">Signin</a>
+                <a href="../signup.html">Signup</a>
                 <a class="btn btn-green" href="my-cart.html">
-                    <i class="fa fa-shopping-cart"></i>
-                    <span class="count cart-count">0</span>
+                    <i class="fa fa-shopping-cart"></i> <span class="count cart-count">0</span>
                 </a>
-                <a href="javascript:;" class="btn-rounded logout">Logout</a>
                 <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
@@ -138,7 +127,6 @@
 
     <script src="../src/index.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script src="../src/redirectCtrl.js"></script>
     <script src="../src/fetchMenuCtrl.js"></script>
     <script src="../src/addToCartCtrl.js"></script>
 </body>
