--- a/server/UI/users/ordered-items.html
+++ b/server/UI/users/ordered-items.html
@@ -63,13 +63,10 @@
                                 <th>Quantity</th>
                                 <th>Amount</th>
                                 <th>Date Ordered</th>
-                                <th>Order Status</th>
-                                <th>Delivery Status</th>
-                                <th>Actions</th>
+                                <th>Item Status</th>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <!-- <td><a class="link">#55678</a></td> -->
                                     <td>Orange Juice</td>
                                     <td>&#8358; 500</td>
                                     <td>1</td>
@@ -121,9 +118,11 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../src/index.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../src/index.js"></script>
     <script src="../src/redirectCtrl.js"></script>
+    <script src="../src/getItemsCtrl.js"></script>
+
 </body>
 
 </html>
